src/scss/mediaqueries.scss
@media screen and (min-width: 540px) {
    #products {
        grid-template-columns: repeat(2, minmax(0, 1fr));
    }
}
@media screen and (min-width: 720px) {
    .form-signin {
        min-width: 480px;
    }
    .product-offer {
        height: 320px;
    }
    .product-offer.highlight {
        grid-column-end: 3;
    }
    .selection {
        flex-direction: row;
        overflow: initial;
        .card {
            flex-grow: 1;
            &:nth-child(2) {
                margin-left: 20px;
            }
        }
        .card-img-top {
            height: 280px;
        }
    }
    .navbar-brand span {
        display: inline;
    }
    .modal-dialog {
        max-width: 768px;
    }
    .modal-dialog.modal-xl {
        max-width: 1140px;
    }
    .cart-item {
        flex-wrap: nowrap;
    }
    .ci-img {
        display: block;
    }
    .ci-price {
        flex-grow: 0;
    }
    .tab {
        width: 140px;
        height: 140px;
    }
    .cart-item .btn {
        font-size: 1.5em;
    }
    .ci-total, .ci-price {
        min-width: 80px;
    }
}
@media screen and (min-width: 840px) {
    .pd-control {
        display: flex;
    }
}
@media screen and (min-width: 1024px) {
    #tabs {
        min-width: 220px;
    }
    .tab {
        width: 180px;
        height: 180px;
    }
    .product-offer {
        height: 340px;
    }
    .po-control button {
        padding: 15px 30px;
    }
    .product-offer.highlight {
        grid-column-end: 4;
    }
    .add i.material-icons {
        font-size: 28px;
    }
    #products {
        grid-template-columns: repeat(3, minmax(0, 1fr));
    }
}
@media screen and (min-width: 1366px) {
    #products {
        grid-template-columns: repeat(4, minmax(0, 1fr));
    }
}

@media print {
    body {
      height: initial;
    }
    #app, #spinner, .pika-single, 
    .modal-backdrop, .modal-header, .modal-footer {
      display: none;
    }
    .modal-content {
      box-shadow: none;
      width: initial;
    }
    .modal-dialog {
      max-width: initial;
      margin: initial
    }
    .modal-dialog-centered {
      align-items: initial;
      min-height: initial;
    }
    .modal-content .modal-body {
      padding: 0;
    }
    pre {
      padding: 0 10px;
      border: none;
      font-size: 12px;
    }
  }
  

